syntax = "proto3";

package test;

option go_package = "github.com/WingT/go-grpc-cache/test_pb";

service TestService {
    rpc TestStreamEnable (TestRequest) returns (stream TestResponse);
    rpc TestUnaryEnable (TestRequest) returns (TestResponse);
    rpc TestStreamDisable (TestRequest) returns (stream TestResponse);
    rpc TestUnaryDisable (TestRequest) returns (TestResponse);
}

message TestRequest {
    bool enable = 1; // control req cache enable
    int64 count = 2; // control resp size
    string key = 3; // control cache key
}
message TestResponse {
    bytes data = 1;
    int64 call_count = 2; // how many times underlying service was called
}
